# utilities

./: .gitignore  AGENTS.md  README.md  github_repo_stat.py  health_workout_extract.py  pyproject.toml  read_parquet.py  requirements.txt  statement_parser.py  tax_return_example.csv  tax_return_format.csv  tax_return_parser.py
docs/: GUIDE.md
