[project]
name = "utilities"
version = "0.1.0"
description = "Repository utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click==8.1.8",
    "click-default-group==1.2.4",
    "pluggy==1.5.0",
    "polars==1.26.0",
    "pyarrow==19.0.1",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "sqlite-fts4==1.0.3",
    "sqlite-utils==3.38",
    "tabulate==0.9.0",
    "python-dotenv",
]
